--- a/verdaccio.yaml
+++ b/verdaccio.yaml
@@ -7,14 +7,16 @@ web:
 
 uplinks:
   npmjs:
-    url: https://registry.npmjs.org/
+    url: https://registry.npmjs.org
+  github:
+    url: https://npm.pkg.github.com
 
 packages:
   "@olddude/*":
     access: $all
     publish: $all
     unpublish: $all
-    proxy: ""
+    proxy: github
 
   "**":
     access: $all
