--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.7.0",
   "license": "MIT",
   "private": true,
+  "type": "module",
   "scripts": {
     "reset": "npx nx reset",
     "build": "npx nx run-many --target=build --all --configuration=development",
@@ -26,7 +27,9 @@
     "graph": "npx nx graph",
     "verdaccio": "npx verdaccio -c verdaccio.yaml",
     "publish:local": "npx nx run-many --target=publish-local --all",
-    "publish": "npx nx run-many --target=publish --all"
+    "publish": "npx nx run-many --target=publish --all",
+    "unpublish:local": "npx nx run-many --target=unpublish-local --all",
+    "watch": "ts-node ./tools/watch.ts"
   },
   "dependencies": {
     "@angular-builders/custom-webpack": "^20.0.0",
@@ -69,7 +72,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.0",
-    "@types/node": "18.16.9",
+    "@types/node": "^24.3.1",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/utils": "^8.29.0",
     "angular-eslint": "^20.0.0",
