--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,6 +14,9 @@
       "es2022",
       "dom"
     ],
+    "types": [
+      "node"
+    ],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
