--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "private": true,
   "scripts": {
     "reset": "npx nx reset",
-    "build": "npx nx run-many --target=build --all --configuration=development",
-    "build:prod": "npx nx run-many --target=build --all --configuration=production",
-    "test": "npx nx run-many --target=test --all",
-    "test:ci": "npx nx run-many --target=test --all --configuration=ci",
-    "lint": "npx nx run-many --target=lint --all",
+    "build": "npx nx run-many --target=build --configuration=development",
+    "build:prod": "npx nx run-many --target=build --configuration=production",
+    "test": "npx nx run-many --target=test",
+    "lint": "npx nx run-many --target=lint",
+    "lint:fix": "npx nx run-many --target=lint --fix",
     "patch": "npm version patch --no-git-tag-version && npx nx run-many --target=patch --all",
     "minor": "npm version minor --no-git-tag-version && npx nx run-many --target=minor --all",
     "major": "npm version major --no-git-tag-version && npx nx run-many --target=major --all",
@@ -17,90 +17,73 @@
     "affected:build:prod": "npx nx affected --target=build --configuration=production",
     "affected:test": "npx nx affected --target=test",
     "affected:lint": "npx nx affected --target=lint",
+    "affected:lint:fix": "npx nx affected --target=lint --fix",
     "affected:publish": "npx nx affected --target=publish",
     "affected:patch": "npm version patch --no-git-tag-version && npx nx affected --target=patch",
     "affected:minor": "npm version minor --no-git-tag-version && npx nx affected --target=minor",
     "affected:major": "npm version major --no-git-tag-version && npx nx affected --target=major",
-    "e2e": "npx nx e2e shell-e2e",
-    "e2e:headless": "npx nx e2e shell-e2e --headless",
-    "graph": "npx nx graph",
-    "verdaccio": "npx verdaccio -c verdaccio.yaml",
-    "publish:local": "npx nx run-many --target=publish-local --all",
-    "publish": "npx nx run-many --target=publish --all",
-    "unpublish:local": "npx nx run-many --target=unpublish-local --all",
-    "watch": "node -r ts-node/register tools/watch.ts"
+    "graph": "npx nx graph"
   },
   "dependencies": {
-    "@angular-builders/custom-webpack": "^20.0.0",
-    "@angular-devkit/build-angular": "~20.1.0",
-    "@angular/animations": "~20.1.0",
-    "@angular/common": "~20.1.0",
-    "@angular/compiler": "~20.1.0",
-    "@angular/core": "~20.1.0",
-    "@angular/forms": "~20.1.0",
-    "@angular/platform-browser": "~20.1.0",
-    "@angular/platform-browser-dynamic": "~20.1.0",
-    "@angular/router": "~20.1.0",
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
+    "@angular/animations": "~20.2.0",
+    "@angular/common": "~20.2.0",
+    "@angular/compiler": "~20.2.0",
+    "@angular/core": "~20.2.0",
+    "@angular/forms": "~20.2.0",
+    "@angular/platform-browser": "~20.2.0",
+    "@angular/platform-browser-dynamic": "~20.2.0",
+    "@angular/router": "~20.2.0",
+    "@ngrx/effects": "^20.0.1",
+    "@ngrx/entity": "^20.0.1",
+    "@ngrx/router-store": "^20.0.1",
+    "@ngrx/store": "^20.0.1",
+    "@ngrx/store-devtools": "^20.0.1",
+    "@softarc/native-federation-node": "^2.0.10",
+    "es-module-shims": "^2.6.2",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-architects/native-federation": "^20.1.6",
-    "@angular-devkit/core": "~20.1.0",
-    "@angular-devkit/schematics": "~20.1.0",
-    "@angular/build": "~20.1.0",
-    "@angular/cli": "~20.1.0",
-    "@angular/compiler-cli": "~20.1.0",
-    "@angular/language-service": "~20.1.0",
+    "@angular-devkit/build-angular": "^20.3.2",
+    "@angular-devkit/core": "~20.2.0",
+    "@angular-devkit/schematics": "~20.2.0",
+    "@angular/build": "^20.3.1",
+    "@angular/cli": "~20.2.0",
+    "@angular/compiler-cli": "~20.2.0",
+    "@angular/language-service": "~20.2.0",
     "@eslint/js": "^9.8.0",
-    "@nx/angular": "21.4.0",
-    "@nx/cypress": "21.4.0",
-    "@nx/devkit": "21.4.0",
-    "@nx/esbuild": "^21.4.1",
-    "@nx/eslint": "21.4.0",
-    "@nx/eslint-plugin": "21.4.0",
-    "@nx/express": "21.4.0",
-    "@nx/jest": "21.4.0",
-    "@nx/js": "21.4.0",
-    "@nx/node": "21.4.0",
-    "@nx/web": "^21.4.0",
-    "@nx/workspace": "21.4.0",
-    "@schematics/angular": "~20.1.0",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.21",
+    "@nx/angular": "21.5.2",
+    "@nx/eslint": "21.5.2",
+    "@nx/eslint-plugin": "21.5.2",
+    "@nx/jest": "21.5.2",
+    "@nx/js": "21.5.2",
+    "@nx/web": "21.5.2",
+    "@nx/workspace": "21.5.2",
+    "@schematics/angular": "~20.2.0",
     "@types/jest": "^29.5.0",
-    "@types/node": "^24.3.1",
-    "@types/supertest": "^6.0.3",
-    "@typescript-eslint/utils": "^8.29.0",
-    "angular-eslint": "^20.0.0",
-    "autoprefixer": "^10.4.0",
-    "browser-sync": "^3.0.0",
-    "cypress": "^14.2.1",
-    "dotenv": "^17.2.1",
+    "@types/node": "20.19.9",
+    "@typescript-eslint/utils": "^8.40.0",
+    "angular-eslint": "^20.2.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
-    "eslint-plugin-cypress": "^3.5.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.6.1",
     "jest-util": "^29.7.0",
-    "jsonc-eslint-parser": "^2.1.0",
-    "ng-packagr": "~20.1.0",
-    "nx": "21.4.0",
-    "postcss": "^8.4.5",
-    "postcss-url": "~10.1.3",
+    "ng-packagr": "^20.3.0",
+    "nx": "21.5.2",
+    "openapi-typescript": "^7.9.1",
     "prettier": "^2.6.2",
-    "react-refresh": "^0.10.0",
-    "supertest": "^7.1.4",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.8.2",
-    "typescript-eslint": "^8.29.0",
-    "verdaccio": "^6.1.6",
-    "webpack": "^5.90.0"
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.40.0"
+  },
+  "overrides": {
+    "test-exclude": "^7.0.1",
+    "glob": "^10.4.5"
   },
   "nx": {
     "includedScripts": []
