--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -11,14 +11,10 @@
     "target": "es2022",
     "module": "esnext",
     "lib": ["es2022", "dom"],
-    "types": ["node", "./types.d.ts"],
+    "types": ["node"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {
-      "@olddude/angular-shared": ["libs/angular-shared/src/index.ts"],
-      "@olddude/angular-auth-shared": ["libs/angular-auth-shared/src/index.ts"]
-    },
     "strict": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
