--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -38,7 +38,7 @@ jobs:
         run: npm run lint
 
       - name: Test Affected
-        run: npm run test:ci
+        run: npm run test
 
       - name: Build Affected
         run: npm run build
