--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -18,6 +18,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Configure GitHub Package Registry
+        run: |
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> ~/.npmrc
+          npm config set @olddude:registry https://npm.pkg.github.com
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -29,6 +34,8 @@ jobs:
 
       - name: Install Dependencies
         run: npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Check Outdated Packages
         run: npm outdated || true
