--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -19,6 +19,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Configure GitHub Package Registry
+        run: |
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> ~/.npmrc
+          npm config set @olddude:registry https://npm.pkg.github.com
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -30,6 +35,8 @@ jobs:
 
       - name: Install Dependencies
         run: npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Check Outdated Packages
         run: npm outdated || true
@@ -55,6 +62,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Configure GitHub Package Registry
+        run: |
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> ~/.npmrc
+          npm config set @olddude:registry https://npm.pkg.github.com
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -65,6 +77,8 @@ jobs:
 
       - name: Install Dependencies
         run: npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract Version Info
         id: version
