--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "prepare": "npx husky",
     "reset": "npx nx reset",
-    "build": "npx nx run-many --target=build --configuration=development",
-    "build:prod": "npx nx run-many --target=build --configuration=production",
-    "test": "npx nx run-many --target=test",
     "lint": "npx nx run-many --target=lint",
     "lint:fix": "npx nx run-many --target=lint --fix",
+    "test": "npx nx run-many --target=test",
+    "build": "npx nx run-many --target=build --configuration=development",
+    "build:prod": "npx nx run-many --target=build --configuration=production",
+    "publish": "npx nx run-many --target=publish",
     "patch": "npm version patch --no-git-tag-version && npx nx run-many --target=patch --all",
     "minor": "npm version minor --no-git-tag-version && npx nx run-many --target=minor --all",
     "major": "npm version major --no-git-tag-version && npx nx run-many --target=major --all",
